--- a/main.css
+++ b/main.css
@@ -78,8 +78,15 @@ body{
       opacity:1;
       cursor:pointer;
       background-color: #472E32;
+        text-align: center;
 }
 
+
+#newQuoteText{
+    text-align: center;
+    padding: auto;
+    margin: auto;
+}
       .button:hover {
         opacity:0.9;
       }
@@ -114,6 +121,9 @@ body{
         float:right;
     font-family: "Concert One";
     font-weight: 500;
+    text-align: center;
+    
+    font-size: 16px;
       }
 
 
